# cargo-fun

./: Cargo.toml  README.md
src/: main.rs
